# pickpy

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: colors.py  demo_basic.py
src/pickpy/: __init__.py  keyboard.py  menu.py  terminal.py
tests/: test_bcolors.py  test_terminal.py
